Revert "CORE-9081: temporarily removing support for the JPA service registry"
This reverts commit 132f53ad4bf99a1d20f01f068c25a89d18ea419a.

--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,16 @@
             <artifactId>cas-server-support-redis-ticket-registry</artifactId>
             <version>${cas.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apereo.cas</groupId>
+            <artifactId>cas-server-support-jpa-service-registry</artifactId>
+            <version>${cas.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apereo.cas</groupId>
+            <artifactId>cas-server-support-jdbc-drivers</artifactId>
+            <version>${cas.version}</version>
+        </dependency>
     </dependencies>
     <properties>
         <cas.standalone.config.file>/etc/cas/config/cas.properties</cas.standalone.config.file>
