--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
         <dependency>
              <groupId>org.cyverse</groupId>
              <artifactId>cyverse-cas-server-support-ldap-rfc2307</artifactId>
-             <version>5.3.7-SNAPSHOT</version>
+             <version>${cas.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apereo.cas</groupId>
