--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,11 @@
             <artifactId>cas-server-webapp-session-redis</artifactId>
             <version>${cas.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apereo.cas</groupId>
+            <artifactId>cas-server-support-oidc</artifactId>
+            <version>${cas.version}</version>
+        </dependency>
     </dependencies>
     <properties>
         <cas.standalone.config.file>/etc/cas/config/cas.properties</cas.standalone.config.file>
